fix tree output overlap

--- a/Wavelength/war/Wavelength.css
+++ b/Wavelength/war/Wavelength.css
@@ -220,7 +220,9 @@ select.form-control {
 	height: 100%
 }
 
+/* fix canvas overlap */
 .tree {
+	display: inline-block;
     width: 100%;
     height: 100%;
     right: 0;
